--- a/Ibm folder/style.css
+++ b/Ibm folder/style.css
@@ -1,245 +1,438 @@
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
-}    
+}
 
-.bg-image{
-   
+html,
+body {
+    overflow-x: hidden;
+}
+
+.bg-image {
     display: block;
     height: 100vh;
     width: 100%;
 }
-#scene_1 {
-    background-image: url('img/background.png');
-    background-size: auto;
-    background-position: center;
-    height: 100vh;
-    display:grid;
-    grid-template-rows: 10% 30% 50% 10%;
-    grid-template-columns: 5vh auto 5vh;
-}
-#scene_1>div{
-    grid-column-start: 2;
-    grid-column-end: 3;
+
+@keyframes text_b2w {
+    0% {
+        color: rgb(0, 0, 0)
+    }
+    100% {
+        color: rgb(255, 255, 255)
+    }
 }
 
-.sticky-navbar{
-    grid-row: 1/2;
+@keyframes text_w2b {
+    0% {
+        color: rgb(255, 255, 255)
+    }
+    100% {
+        color: rgb(0, 0, 0)
+    }
+}
+
+@keyframes bgc_b2w {
+    0% {
+        background-color: rgb(0, 0, 0)
+    }
+    100% {
+        background-color: rgb(255, 255, 255)
+    }
+}
+
+@keyframes bgc_w2b {
+    0% {
+        background-color: rgb(255, 255, 255)
+    }
+    100% {
+        background-color: rgb(0, 0, 0)
+    }
+}
+
+.default_colors {
+    color: white;
+    animation: text_b2w .5s ease-out;
+}
+
+.inverted_colors {
+    color: black;
+    animation: text_w2b .5s ease-out;
+}
+
+.sticky_navbar {
+    grid-row-start: 1;
+    grid-row-end: 2;
     display: grid;
-    grid-template-rows: 25% auto 25% ;
-    position:fixed;
+    grid-template-rows: 25% auto 25%;
+    position: fixed;
     top: 0;
     width: 100%;
-    background-color: rgba(0, 0, 0, 10%);
+    background-color: rgba(0, 0, 0, 0%);
     height: 8%;
-     
 }
-#header-main-row{
-    grid-row: 2   3;
+
+#header_main_row {
+    grid-row-start: 2;
+    grid-row-end: 3;
     display: inline-grid;
-    grid-template-columns:  5vh auto auto auto 40% auto 5vh;
-}
-*#header-main-row{
-    color: white;
+    grid-template-columns: 5vh auto auto auto 40% auto 5vh;
     font-style: normal;
-font-weight: 400;
-font-size: 4vh;
-text-align: center;
+    font-weight: 400;
+    font-size: 4vh;
+    text-align: center;
+    background-color: none;
 }
-#header-main-row>#home{
+
+#header_main_row>#home {
     grid-column-start: 2;
     grid-column-end: 3;
-
 }
 
-a{
+a {
     color: unset;
 }
-#search_bar>input{
-    background: #FFFFFF;
-    border: 3px solid #FFFFFF;
+
+#header_main_row>#search_bar {
+    background-color: rgba(0, 0, 0, 0%);
+}
+
+#header_main_row>#search_bar>input {
+    align-self: center;
+    background-color: none;
+    /*border: 3px solid #FFFFFF;*/
     box-sizing: border-box;
     border-radius: 119px;
     padding: 2vh;
     padding-left: .5vh;
     width: 100%;
-    
 }
 
-
-.center-fit{
-    max-width: 100%;
-    max-height: 100%;
-    margin: auto;
-    padding: 0;
+.default_colors#header_main_row>#search_bar>input {
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    animation: text_w2b .5s;
+    animation: bgc_b2w .5s;
 }
-.navbar{
+
+.inverted_colors#header_main_row>#search_bar>input {
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    animation: text_b2w .5s;
+    animation: bgc_w2b .5s;
+}
+
+#scene_1 {
+    background-image: url('img/background.png');
+    background-size: auto;
+    background-position: center;
+    height: 100vh;
+    display: grid;
+    grid-template-rows: 10% 30% 50% 10%;
+    grid-template-columns: 5vh auto 5vh;
+}
+
+#scene_1>div {
+    grid-column-start: 2;
+    grid-column-end: 3;
+}
+
+.navbar {
     height: 12%;
     display: flex;
-    align-items:center;
+    align-items: center;
     position: relative;
     text-decoration: none;
-}    
-.menu-header{
-  color: brown;
-  text-decoration: none;
 }
 
-a:link{ 
+.menu-header {
+    color: brown;
     text-decoration: none;
 }
 
-.title{
-    display:inline-grid;
+a:link {
+    text-decoration: none;
+}
+
+.title {
+    display: inline-grid;
     grid-row-start: 2;
     grid-row-end: 3;
-font-family: Roboto;
-font-style: normal;
-font-weight: bold;
-font-size: 6vh;
-
-color: #FFFFFF;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 6vh;
+    color: #FFFFFF;
 }
-.popular_locations{
+
+.popular_locations {
     grid-row-start: 3;
     grid-row-end: 4;
-display: inline-grid;
-grid-template-rows: 20% 80%;
-grid-template-columns: 100%;
-grid-row-gap: 5%;
-
-
+    display: inline-grid;
+    grid-template-rows: 20% 80%;
+    grid-template-columns: 100%;
+    grid-row-gap: 5%;
 }
 
-.popular_title{
-
-font-style: normal;
-font-weight: bold;
-font-size: 3vh;
-line-height: 56px;
-
-color: #FFFFFF;
-
-grid-row: 1/2;
-
+.popular_title {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 3vh;
+    line-height: 56px;
+    color: #FFFFFF;
+    grid-row: 1/2;
 }
 
-.popular_container{
+.popular_container {
     grid-row: 2/3;
     display: grid;
     grid-template-columns: 20% 20% 20% 40%;
     grid-template-rows: 100%;
     grid-column-gap: 1vh;
-
 }
 
-.arrow {
-    grid-row: 4/5;
-}
-.popular_container>div>h3{
+.popular_container>div>h3 {
     position: relative;
     color: white;
     top: 84%;
     font-size: 3.7vh;
-
 }
 
-.popular_container>div{
-     background-size: cover;
-     background-position: center;
-     border-radius: 3vh;
-     width: 100%;
-     max-height: 80%;
-     
+.popular_container>div {
+    background-size: cover;
+    background-position: center;
+    border-radius: 3vh;
+    width: 100%;
+    max-height: 80%;
 }
 
-#city{
-  background-image: url(img/Sfcityhall.jpeg);
+#city {
+    background-image: url(img/Sfcityhall.jpeg);
 }
-#golden{
+
+#golden {
     background-image: url(img/111.jpeg);
 }
 
-#Avenue{
+#Avenue {
     background-image: url(img/\ Doubtfire.jpeg);
-    
-
 }
 
-.arrow{
+#arrow {
+    grid-row-start: 4;
+    grid-row-end: 5;
     display: inline-grid;
     grid-template-rows: 25% auto 25%;
     grid-template-columns: 25% auto 25%;
     overflow-y: hidden;
 }
-.arrow>img{
+
+#arrow>img {
     grid-row-start: 2;
     grid-row-end: 3;
     grid-column-start: 2;
     grid-column-end: 3;
     padding-left: 50%;
     padding-right: 50%;
-padding-top: 0%;
-animation-name: twitch;
-animation-iteration-count: infinite;
-animation-delay: 2s;
-animation-duration: 1s;
-
+    padding-top: 0%;
+    animation-name: twitch;
+    animation-iteration-count: infinite;
+    animation-delay: 2s;
+    animation-duration: 1s;
 }
-@keyframes twitch {
-    0% {padding-top: 0%}
-    50% {padding-top: 1%;}
-    100% {padding-top: 0%;}
-  }
 
-  .scene_2{
-   
-    display:grid;
-    grid-template-rows: 10vh auto 10vh;
+@keyframes twitch {
+    0% {
+        padding-top: 0%
+    }
+    50% {
+        padding-top: 1%;
+    }
+    100% {
+        padding-top: 0%;
+    }
+}
+
+#scene_2 {
+    display: grid;
+    grid-template-rows: 10vh auto 10vh 10vh;
     height: 100vh;
     grid-template-columns: 5vh auto 10vh 5vh;
-    
-  }
+    border: 1px solid black;
+}
 
-  #table{
-    border-collapse: collapse;
-    grid-row-start: 2 ;
+#menu_space_2 {
+    grid-row-start: 1;
+    grid-row-end: 2;
+    grid-column-start: 1;
+    grid-column-end: 5;
+}
+
+
+/*MOVIE LIST*/
+
+#table {
+    grid-template-rows: auto auto;
+    grid-row-start: 2;
     grid-row-end: 3;
     text-align: center;
-    grid-column-start:2;
-    grid-column-end:3 ;
+    grid-column-start: 2;
+    grid-column-end: 3;
     font-size: 4vh;
     font-weight: 400;
-     
-  }
-  #table>*{
-      text-align: center;
-      font-weight: 500;
+}
 
-  }
+#table>* {
+    text-align: center;
+    font-weight: 500;
+}
 
-  .row{
-      background-color: rgba(196, 196, 196, 50%);
-      border-radius: 119px;
-      margin-bottom: 2vh;
-  }
+.row {
+    background-color: rgba(196, 196, 196, 50%);
+    border-radius: 119px;
+    margin-bottom: 2vh;
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+    grid-template-rows: 100%;
+    justify-content: center;
+}
 
-
-    
-  .column{
-
-  }
-  .row{
-      display: grid;
-      grid-template-columns: 33% 33% 33%;
-      grid-template-rows: 100%;
-  }
-  #table_head{
+#table_head {
     background-color: unset;
-    text-align: center; 
+    text-align: center;
     font-size: 4vh;
     text-align: center;
     border-collapse: collapse;
-  }
+}
 
+
+/*NAVIGATION*/
+
+#navigation_button_container {
+    grid-row-start: 3;
+    grid-row-end: 4;
+    grid-column-start: 1;
+    grid-column-end: 4;
+    display: inline-grid;
+    grid-template-columns: 5vh 30% auto 30% 5vh;
+    grid-template-rows: 25% auto 25%;
+    justify-items: center;
+    align-content: center;
+}
+
+#navigation_button_container>div {
+    grid-row-start: 2;
+    grid-row-end: 3;
+    font-size: 4vh;
+    font-weight: 400;
+    text-align: center;
+    border-radius: 119px;
+}
+
+#navigation_button_container>#navigation_back {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    width: 10vh;
+}
+
+#navigation_button_container>#navigation_page_number {
+    grid-column-start: 3;
+    grid-column-end: 4;
+}
+
+#navigation_button_container>#navigation_page_number>* {
+    display: inline;
+}
+
+#navigation_button_container>#navigation_forward {
+    grid-column-start: 4;
+    grid-column-end: 5;
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    width: 10vh;
+}
+
+
+/*OVERLAY*/
+
+#overlay {
+    background-color: rgba(255, 255, 255, 50%);
+    position: relative;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    z-index: 1;
+    display: none;
+    grid-template-columns: 25% auto 25%;
+    grid-template-rows: 25% auto 25%;
+}
+
+#overlay>div {
+    grid-row-start: 2;
+    grid-row-end: 3;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    background-color: white;
+    display: grid;
+    grid-template-rows: 5% auto auto auto 5%;
+    grid-template-columns: 5% auto 5% 5%;
+}
+
+#title {
+    grid-row-start: 2;
+    grid-row-end: 3;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    background-color: royalblue;
+}
+
+#overlay_card_button {
+    text-align: center;
+    background-color: rosybrown;
+    height: min-content;
+    font-size: 3vh;
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 2;
+    grid-row-end: 3;
+}
+
+
+/*FOOTER*/
+
+footer {
+    display: grid;
+    grid-template-rows: 5vh auto auto auto 5vh;
+    grid-template-columns: 5vh auto 50vw;
+    color: white;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 4vh;
+    text-align: center;
+    background-color: black;
+    height: 20vh
+}
+
+footer>div {
+    grid-column-start: 2;
+    grid-column-end: 3;
+}
+
+footer>div#footer_home {
+    grid-row-start: 2;
+    grid-row-end: 3;
+}
+
+footer>div#footer_films_list {
+    grid-row-start: 3;
+    grid-row-end: 4;
+}
+
+footer>div#footer_contact_us {
+    grid-row-start: 4;
+    grid-row-end: 5;
+}
